# src/controllers/StatementController.js
@@ -1,41 +1,35 @@
-const mongoose = require('mongoose');//*Importa o mongoose
-mongoose.connect('mongodb://localhost:27017/apiFinanceira');//*Conecta o mongoose com o mongodb
-const StatementModel = require('../models/statement');
-const AccountModel = require('../models/account');//*Importa a collection de models
-const StatementValidator = require('../validators/StatementValidators/Statement')
+const StatementService = require('../services/Statement/StatementService');
 
 
-class StatementController {//*É uma classe que contem o estrato bancario 
+class StatementController { 
     async listOneAccountStatement (req, res) {
         try {
             const { token } = res.auth;
-            const statement = await StatementModel.find({ accountId: token.account_id });
-            return res.status(200).json({ statement });
-          
+            const accountStatement = await StatementService.listOneAccountStatement({ token });
+            const finalReturn = accountStatement.map(account => ({ 
+                amount: account.amount,
+                type: account.type,
+                created_at: account.created_at
+            }));
+            return res.status(200).json({ accountStatement: finalReturn });
         } catch (error) {
-            return res.status(404).json({message: error.message});
+            return res.status(404).json({ message: error });
         };
     };
     
     async statementByDate (req, res) {     
         try {
-            const { startDate, endDate } = req.query;
             const { token } = res.auth;
-            const account = await AccountModel.findOne({ _id: token.account_id });
-            if(!account) throw 'Conta não existe.';
-
-            await StatementValidator.satatementByDateValidator(req.query)
-
-            const condition = {
-                accountId: token.account_id,  created_at: {
-                    $gte: new Date(startDate),
-                    $lte: new Date(endDate)
-                }
-            }; 
-            const statement = await StatementModel.find(condition);
-            if(statement.length === 0) throw "Não há nenhuma transação nesse período de tempo."
-            return res.status(200).json({statement});
+       
+            const statements = await StatementService.statementByDate({ token, query: req.query });
             
+            const finalReturn = statements.map(account => ({ 
+                amount: account.amount,
+                type: account.type,
+                created_at: account.created_at
+            }));
+
+            return res.status(200).json({ finalReturn });
         } catch (error) {
             return res.status(404).json({message: error});
         };
@@ -44,11 +38,16 @@ class StatementController {//*É uma classe que contem o estrato bancario
     async listAllStatement (req, res) {
         try {
             const { token } = res.auth;
-            const account = await AccountModel.findOne({ _id: token.account_id, admin: true }); 
-            if(!account) throw 'Você não tem acesso a essa rota.'
-            const statement = await StatementModel.find({});
-            return res.status(200).json({ statement });
-          
+           
+            const statements = await StatementService.listAllStatements({ token });
+            const finalReturn = statements.map(account => ({ 
+                accountId: account.accountId,
+                amount: account.amount,
+                type: account.type,
+                created_at: account.created_at
+            }));
+
+            return res.status(200).json({ finalReturn });
         } catch (error) {
             return res.status(404).json({message: error});
         };
